fix spacing issue for info section and added comments

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,5 @@
-@import url("https://use.typekit.net/jxv0qyr.css");
-
 * {
-    font-family: "mulish-variable", sans-serif;
+    font-family: mulish-variable, sans-serif;
 }
 
 main {
@@ -39,4 +37,8 @@ main {
            color: #3751FF; 
         }
     }
+}
+
+@media (min-width: 768px) {
+    
 }
